k8s-manifests/alb/netshoot-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-netshoot
  labels:
    app: nginx-netshoot
spec:
  selector:
    matchLabels:
      app: nginx-netshoot
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-netshoot
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: netshoot
        image: nicolaka/netshoot
        command:
        - /bin/bash
        args:
        - -c
        - while true; do ping localhost; sleep 60;done
