k8s-manifests/alb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: app-2048
